src/objects/Restrizioni_Voucher__c.object
<CustomObject>
    <description>Restrizioni applicabili alla richiesta di voucher verso Hybris</description>
    <fields>
        <fullName>Categorie_prodotto__c</fullName>
        <description>lista codici categorie (separati da ,)</description>
        <inlineHelpText>lista codici categorie (separati da ,)</inlineHelpText>
        <label>Categorie prodotto</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Descrizione__c</fullName>
        <label>Descrizione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escludi_IVA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escludi IVA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Esclusi_costi_spedizione__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Esclusi costi spedizione</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fine__c</fullName>
        <label>Fine</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inizio__c</fullName>
        <label>Inizio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Numero_minimo_di_ordini__c</fullName>
        <label>Numero minimo di ordini</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prodotti__c</fullName>
        <description>lista codici prodotti (separati da ,)</description>
        <inlineHelpText>lista codici prodotti (separati da ,)</inlineHelpText>
        <label>Prodotti</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quantit_ordinata__c</fullName>
        <label>Quantità ordinata</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Richiesta_Voucher__c</fullName>
        <label>Richiesta Voucher</label>
        <referenceTo>Richiesta_Voucher__c</referenceTo>
        <relationshipLabel>Restrizioni Vouchers</relationshipLabel>
        <relationshipName>Restrizioni_Vouchers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Spesa_minima__c</fullName>
        <label>Spesa minima</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Testo__c</fullName>
        <inlineHelpText>Specificare il testo da mostrare nel caso il voucher non possa essere riscattato a causa di questa restrizione</inlineHelpText>
        <label>Testo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unit_di_misura__c</fullName>
        <label>Unità di misura</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>unità 1</fullName>
                </value>
                <value>
                    <fullName>unità 2</fullName>
                </value>
                <value>
                    <fullName>unità 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Utenti__c</fullName>
        <description>lista codici users (separati da ,)</description>
        <inlineHelpText>lista codici users (separati da ,)</inlineHelpText>
        <label>Utenti</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Validit__c</fullName>
        <description>ABOVE - al di sopra del valore totale dell&apos;ordine specificato
UPTO - fino al valore totale dell&apos;ordine specificato
SELECTED - per le categorie selezionate
EXCEPT - per tutte le categorie eccetto quelle selezionate</description>
        <label>Validità</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABOVE</fullName>
                </value>
                <value>
                    <fullName>UPTO</fullName>
                </value>
                <value>
                    <fullName>SELECTED</fullName>
                </value>
                <value>
                    <fullName>EXCEPT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valore_ordine__c</fullName>
        <label>Valore ordine</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Restrizione Voucher</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Restrizioni Vouchers</pluralLabel>
    <recordTypes>
        <fullName>Restrizione_10</fullName>
        <active>true</active>
        <description>10-Restrizione per numero di Ordini (per clienti regolari)</description>
        <label>Restrizione per numero di Ordini</label>
    </recordTypes>
    <recordTypes>
        <fullName>Restrizione_20</fullName>
        <active>true</active>
        <description>20-Restrizione per revenue (per clienti regolari)</description>
        <label>Restrizione per revenue (per clienti regolari)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Restrizione_30</fullName>
        <active>true</active>
        <description>30-Restrizione per nuovi clienti</description>
        <label>Restrizione per nuovi clienti</label>
    </recordTypes>
    <recordTypes>
        <fullName>Restrizione_40</fullName>
        <active>true</active>
        <description>40-Restrizione per valore dell&apos;ordine</description>
        <label>Restrizione per valore dell&apos;ordine</label>
    </recordTypes>
    <recordTypes>
        <fullName>Restrizione_50</fullName>
        <active>true</active>
        <description>50-Restrizione per prodotto</description>
        <label>Restrizione per prodotto</label>
    </recordTypes>
    <recordTypes>
        <fullName>Restrizione_60</fullName>
        <active>true</active>
        <description>60-Restrizione per categoria prodotto</description>
        <label>Restrizione per categoria prodotto</label>
    </recordTypes>
    <recordTypes>
        <fullName>Restrizione_70</fullName>
        <active>true</active>
        <description>70-Restrizione per quantità ordinata</description>
        <label>Restrizione per quantità ordinata</label>
    </recordTypes>
    <recordTypes>
        <fullName>Restrizione_80</fullName>
        <active>true</active>
        <description>80-Restrizione per utente</description>
        <label>Restrizione per utente</label>
    </recordTypes>
    <recordTypes>
        <fullName>Restrizione_90</fullName>
        <active>true</active>
        <description>90-Restrizione temporanea</description>
        <label>Restrizione temporanea</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>